Add RequireJS, PreloadJS, and EaselJS

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
-  Hello, world!
+  <!-- Application source. -->
+  <script data-main="src/config" src="vendor/requirejs/require.js"></script>
 </body>
 </html>
